fix maven oom issue