@@ -37,7 +37,7 @@ set -eo pipefail
 ROOT=`dirname "$0"`
 ROOT=`cd "$ROOT"; pwd`
 MACHINE_TYPE=$(uname -m)
-
+export MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=2048m"
 export STARROCKS_HOME=${ROOT}
 
 . ${STARROCKS_HOME}/env.sh
